--- a/blog/Issue9/2024-02-27-art.md
+++ b/blog/Issue9/2024-02-27-art.md
@@ -10,86 +10,86 @@ hide_table_of_contents: true
 <!-- truncate -->
 
 
-![Accelerndo: BJMD, Issue 9](./Accelerando2024.png)
+![Accelerndo: BJMD, Issue 9](./accelerandoBJMD2024.png)
 
-[Download full PDF]
+[Download full PDF](https://drive.google.com/file/d/1Z-nqlv5mdvejn3Rfc0zp0cHqb8_H54bK/view?usp=sharing)
 
-### CHALLENGES OF GLOBALIZATION: CULTURAL IDENTITY AND CULTURAL EXCHANGE
+### Challenges Of Globalization: Cultural Identity And Cultural Exchange
 
-#### ARTISTIC DIALOGUE OF TRADITIONAL CHINESE MUSIC AND WESTERN APPROACH IN CHOREOGRAPHY
+#### Artistic Dialogue Of Traditional Chinese Music And Western Approach In Choreography
 
 Shengya Huang
 
-[Read Online](/articles/issue9/artistic-dialogue-of-traditional-chinese-music-and-western-approach-in-choreography) [Download]
+[Read Online](/articles/issue9/artistic-dialogue-of-traditional-chinese-music-and-western-approach-in-choreography) [Download](https://drive.google.com/file/d/1QUdEHuXJ8QPc1ysUJJ7fw6pLbbzxiUUn/view?usp=sharing)
 
-#### TURANDOT: THE HALF-BLOOD PRINCESS
+#### Turandot: The Half-Blood Princess
 
 Tianrui Hu
 
-[Read Online](https://docusaurus.io) [Download]
+[Read Online](/articles/issue9/turandot-the-half-blood-princess) [Download](https://drive.google.com/file/d/1wF-pIFko5cS4uFC8yJq7tJXhYFCYRfua/view?usp=sharing)
 
-#### MUSIC PERFORMANCE OF FELA ANIKULAPO KUTI AS AN ENVIRONMENTAL JUSTICE ACTIVIST IN NIGERIA
+#### Music Performance Of Fela Anikulapo Kuti As An Environmental Justice Activist In Nigeria
 
 Olusegun Stephen Titus, and Samuel A. Adejube
 
-[Read Online](https://docusaurus.io) [Download]
+[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1OCWEoOAF-VoQKotAa67ScH9lvWJ_LW16/view?usp=sharing)
 
-#### REPOSITIONING AFRO-POP IN THE GLOBAL MUSIC SPACE: THE CONTRIBUTIONS OF DAVIDO MUSIC WORLDWIDE (DMW)’S 30 BILLION GANG
+#### Repositioning Afro-Pop In The Global Music Space: The Contributions Of Davido Music Worldwide (Dmw)’S 30 Billion Gang
 
 Vincent Bamidele Omolaye
 
-[Read Online](https://docusaurus.io) [Download]
+[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1kJxxTendwqEejc0iugQRurN4duKLs2aO/view?usp=sharing)
 
-#### ETHNIC-BASED POPULAR MUSIC IN EKITI: A STUDY OF ELEMURE OGUNYEMI’S ERE IBILE
+#### Ethnic-Based Popular Music In Ekiti: A Study Of Elemure Ogunyemi’S Ere Ibile
 
 Gbenga Oluwaseun Falana and Olusegun Stephen Titus
 
-[Read Online](https://docusaurus.io) [Download]
+[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1oinwtcTCnHpMaf7RtjyO_g3FRby26Zw8/view?usp=sharing)
 
-#### CULTURAL INFLUENCE OF THE ODABARA DANCE ON THE CULTURAL DEVELOPMENT OF IKEM COMMUNITY, ISI-UZO LOCAL GOVERNMENT, ENUGU STATE
+#### Cultural Influence Of The Odabara Dance On The Cultural Development Of Ikem Community, Isi-Uzo Local Government, Enugu State
 
 Emmanuel Oyeunji Alemede and Akinbiola Oluwabusayo
 
-[Read Online](https://docusaurus.io) [Download]
+[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1NYlU_t-IMowjUdg0rJbrh-qyjKxoSQKr/view?usp=sharing)
 
-### MOVEMENTS AND SOUNDS
+### Movements And Sounds
 
-##### TAXONOMY OF GESTURE-SOUND RELATIONSHIPS IN MANUAL INTERACTIONS WITH IMAGINARY OBJECTS (MIIO) IN HINDUSTANI DHRUPAD VOCAL IMPROVISATION
+##### Taxonomy Of Gesture-Sound Relationships In Manual Interactions With Imaginary Objects (Miio) In Hindustani Dhrupad Vocal Improvisation
 
 Stella Paschalidou
 
-[Read Online](https://docusaurus.io) [Download]
+[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1fXhK513b7La1MnwYwZWpco46V5ZFVtXI/view?usp=sharing)
 
-#### THE SYNERGY OF MUSIC, MOVEMENT AND TECHNOLOGY IN THE AUTHOR'S CHOREOGRAPHIES
+#### The Synergy Of Music, Movement And Technology In The Author's Choreographies
 
 Anna Galikowska-Gajewska
 
-[Read Online](https://docusaurus.io) [Download]
+[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1jMmRlyq2ZT99dsnCk2CIrip9G8Dyh1Zs/view?usp=sharing)
 
-### EDUCATION – PEDAGOGY & POLICY
+### Education – Pedagogy & Policy
 
-#### TOWARDS A STRATEGIC POLICY FORMULATION FOR ENHANCED MUSIC DIRECTING AND ENSEMBLE MANAGEMENT IN NIGERIA
+#### Towards A Strategic Policy Formulation For Enhanced Music Directing And Ensemble Management In Nigeria
 
 Oghenemudiakevwe Igbi and Ezinne Igbi
 
-[Read Online](https://docusaurus.io) [Download]
+[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1PJxdmrf1Gk5EYOSnBV54d_y8ckKkp6wT/view?usp=sharing)
 
-#### PEDAGOGICAL APPROACH TOWARDS DEVELOPING EARLY CHILDHOOD MUSIC EDUCATION IN NIGERIA
+#### Pedagogical Approach Towards Developing Early Childhood Music Education In Nigeria
 
 Samuel Adeleke Joel
 
-[Read Online](https://docusaurus.io) [Download]
+[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1_97Vlkm6Vbuxi3WwZvp30rOyqDrqyKgI/view?usp=sharing)
 
-### HISTORICAL OVERVIEW
+### Historical Overview
 
-##### LINKS BETWEEN DANCE AND MUSIC AT THE TIME OF THE LOSS OF POLISH STATEHOOD BETWEEN 1795 AND 1918
+##### Links Between Dance And Music At The Time Of The Loss Of Polish Statehood Between 1795 And 1918
 
 Klaudia Carlos-Machej
 
-[Read Online](https://docusaurus.io) [Download]
+[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1-elx42On_RU-TbKeVTPAEVzkLcCUu1sh/view?usp=sharing)
 
-##### THE CONTRIBUTION TO THE HISTORY OF THE BALLET OF SERBIAN NATIONAL THEATER IN NOVI SAD: RASTISLAV VARGA (1955-2021) [In Serbian]
+##### The Contribution To The History Of The Ballet Of Serbian National Theater In Novi Sad: Rastislav Varga (1955-2021) [In Serbian]
 
 Svenka Savić
 
-[Read Online](https://docusaurus.io) [Download]
+[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1qYXrzx3dwayKq8GW0mSQ5cHYJOR_BFYb/view?usp=sharing)
