--- a/issue1/article01/2016-02-25.mdx
+++ b/issue1/article01/2016-02-25.mdx
@@ -4,6 +4,7 @@ slug: choreographic-methods-for-creating-novel-high-quality-dance
 description: 'We undertook a detailed ethnographic study of the dance creation process of a noted choreographer and his distinguished troupe. All choreographer dancer interactions were videoed, the choreographer and dancers were interviewed extensively each day, as well as other observations and tests performed.'
 authors: [kirsh, dafne, rjao, amylew, sugihara]
 tags: [choreography, multi-modal instruction, dance]
+hide-reading-time: false
 ---
 
 # #1 Choreographic Methods for Creating Novel, High Quality Dance
@@ -924,10 +925,11 @@ __________________
 1. Banks, Marcus. 2005. _Visual Methods in Social Research_. London: Sage. 
 2. Gallagher, Shaun. 2005. _How the Body Shapes the Mind_. Chicago: University of Chicago Press.
 3. Goodwin, Chuck. 1994. "Professional Vision." _American Anthropologist, 96(3): 606-633_. 
-4. Williams, Robert F. (2006). "Using Ethnography to Study Instruction."  In _Proceedings of the 7th International Conference of the Learning Sciences_. Mahwah, NJ: Lawrence Erlbaum Assoc.
+4. Williams, Robert F. 2006. "Using Ethnography to Study Instruction." In _Proceedings of the 7th International Conference of the Learning Sciences_. Mahwah, NJ: Lawrence Erlbaum Assoc.
 
 
 </div>
+
 
 <div className='up'>
 	<a href='#top'>![Back to top](../up.png)</a>
