--- a/issue1/article04/2016-02-22.mdx
+++ b/issue1/article04/2016-02-22.mdx
@@ -122,7 +122,7 @@ Through this process, the dancer’s body becomes more than a cultural repositor
 
 The body of the Cuban dancer processes the particularities of their social and political conditions in a way that makes Cuban dance distinctly Cuban. The impact of dance on individual dance practitioners and society at large emanates from the unit of the body of the dancer, with its special capacity to foster identity formation and interactive dialogue, delineate a protected space for expression and sharing ideas, and facilitate meaningful change.
 
-# ​Taylor’s Expressivism: Formation of the Dancer
+## ​Taylor’s Expressivism: Formation of the Dancer
 
 For the individual dance practitioner, the drive to dance fulfills certain basic human needs. Concerning self-hood and the pursuit of the good life, the moral intuitions at work are uncommonly deep, powerful, and universal (Taylor op. cit., 4). An innate moral imperative drives the individual to adopt a framework that explains the moral positions and choices that constitute an individual’s day-to-day experiences. The articulation and definition of this framework is key to achieving a full sense of self; with this self-knowledge, one can exercise rational agency with integrity, efficacy, and purpose.
 
