--- a/issue1/article05/2016-02-20.mdx
+++ b/issue1/article05/2016-02-20.mdx
@@ -339,9 +339,8 @@ Since the very beginning of Kharkov University (_Pictures 6a_ and _Picture 6b_) 
 
 ​The educational programs of the university featured a set of aesthetic education courses, including practical music lessons. Moreover, now it focused on the link between theoretical and practical training: studying the basics of music art was complemented with the work of students in instrumental and choral classes. Quite a high level of training was provided by authoritative teachers, many of whom had European education, for example, Ivan Vitkovsky (1777 - about 1845), a pupil of Haydn, a violinist, conductor and composer who taught at the University from 1804 to 1815, and from 1821 to 1830 respectively. His contribution to musical education and concert life of the Kharkov University can be compared to the activity of the famous conductor, composer, virtuoso violinist D. Kashin at Moscow University, under whose guidance the student choir and orchestra experienced a period of prosperity.
 
-Pretty soon, the University became the center of the concert life of Kharkov: students, professors, local musicians, amateurs and professional guest artists performed in the assembly hall (_Picture 7_). The interest of young people in instrumental art of European style had serious consequences for the musical culture of Kharkov. Both training and concert repertoire included the works of secular music, the classics.
-
-<div className='figureBox'>
+<div className='floatBox'>
+<div className='figureBox left'>
 	<figure>
 		<img
 			src={require('@site/issue1/article05/pic7.jpg').default}
@@ -355,7 +354,9 @@ Pretty soon, the University became the center of the concert life of Kharkov: st
 	</figure>
 </div>
 
-Those Kharkov residents, who attended university evenings regularly, perceived the European forms of musical life and got acquainted with the works of classical composers. A significant role in this process was that of I. Vitkovsky who gave the student orchestra and ensembles performing major classical works. At the turn of the 18th and 19th century, orchestra that existed under the bishop's choir and landlord orchestras became widespread in the Russian Empire. ​
+Pretty soon, the University became the center of the concert life of Kharkov: students, professors, local musicians, amateurs and professional guest artists performed in the assembly hall (_Picture 7_). The interest of young people in instrumental art of European style had serious consequences for the musical culture of Kharkov. Both training and concert repertoire included the works of secular music, the classics. Those Kharkov residents, who attended university evenings regularly, perceived the European forms of musical life and got acquainted with the works of classical composers. A significant role in this process was that of I. Vitkovsky who gave the student orchestra and ensembles performing major classical works. At the turn of the 18th and 19th century, orchestra that existed under the bishop's choir and landlord orchestras became widespread in the Russian Empire.
+
+</div>
 
 Large-scale cantatas and oratorio pieces performed by students, church and secular choirs, landlord orchestras and artistic professionals of the city enjoyed special attention of the audience. Among the works of this genre, performed in the first decades of the 19th century were: "The Seasons", "Creation", "The Seven Last Words of Christ" by J. Haydn; "Saint Cecilia" by М. Leidesdorf; "Christ on the Mount of Olives" by L. Beethoven; "The Fall of Babylon" by L. Spohr; "St. Paul", "Elijah" and "Psalm 42" by F. Mendelssohn Bartholdy. Some of the above mentioned compositions were performed many times to a full house. For instance, I. Sokalsky, professor of Kharkiv University, commenting on the performance of J. Haydn’s "Creation" wrote that reverent remembrance of this production has been retained in Kharkov society for a long time, and that it can only be compared with the impression produced by the news about the completion of the grand Gotthard tunnel (Sokalsky 1880).
 
