--- a/issue1/article06/2016-02-19.mdx
+++ b/issue1/article06/2016-02-19.mdx
@@ -223,19 +223,22 @@ The author recorded A. J.'s playing: the A. J.’s performance repertoire includ
 
 </div>
 
-​In _Chart 1_, we show the result of the evaluated performance:
+<div className='floatBox'>
 
-<div className='figureBox'>
+
+<div className='figureBox left'>
 <figure>
-	<img src={require('@site/issue1/article06/chart1.png').default} alt='Chart 1.' />
+	<img src={require('@site/issue1/article06/chart1.png').default} alt='Chart 1. The result of the evaluated performance' />
   <figcaption> 
-  **Chart 1.** 
+  **Chart 1.** The result of the evaluated performance
   </figcaption>
 </figure>
 
 </div>
 
 In the _Chart 1_ the rating from the 5 point expressive list is shown. We can compare how each valuator rated A.J.'s performance. The author was the 1st evaluator, the 2nd was university piano professor, the 3rd was a musician and psychologist and the 4th was a music theory university teacher. From this Chart we can see that evaluators perceived rhythm and meter good to very good, technique control very poor, and parameters which refers to expressiveness very poor to weak.
+
+</div>
 
 The evaluators had to evaluate A.J.'s grade (educational) level: from his playing they had to conclude if he was a student of Elementary Music School, a student of Music High School, or a student at the University. _Table 2_ shows evaluation of the grade level of the performer. All the evaluators rated A.J. as the student of an Elementary Music School, with two of them being uncertain between elementary and high school for the reason of compositions he played, which are intended for the student of High School according to educational plan and program, which they commented about in the Note List.
 
