--- a/issue1/article09/2016-02-16.mdx
+++ b/issue1/article09/2016-02-16.mdx
@@ -80,7 +80,7 @@ So, the author's conclusion after many years of studies was that for practical a
 <div className='figureGrid'>
 <div className='figureBox'>
 <figure>
-	<img src={require('@site/issue1/article09/fig1.png').default} alt='Figure 1. Simplified labanotation score' />
+	<img src={require('@site/issue1/article09/fig1.jpg').default} alt='Figure 1. Simplified labanotation score' />
   <figcaption> 
   **Figure 1.** Simplified labanotation score. Source: one of author's students (Carolina Castrillón). University of Antioquia, 2011.
   </figcaption>
@@ -89,7 +89,7 @@ So, the author's conclusion after many years of studies was that for practical a
 </div>
 <div className='figureBox'>
 <figure>
-	<img src={require('@site/issue1/article09/fig2.png').default} alt='Figure 1. Simplified labanotation score' />
+	<img src={require('@site/issue1/article09/fig2.jpg').default} alt='Figure 1. Simplified labanotation score' />
   <figcaption> 
   **Figure 1.** Simplified labanotation score. Source: Valerie Preston Dunlop, Readers in Kynetography Laban.
   </figcaption>
