--- a/issue1/article10/2016-02-15.mdx
+++ b/issue1/article10/2016-02-15.mdx
@@ -1,6 +1,6 @@
 ---
 title: '#10 Začeci Muzičke Kritike U Srbiji: Pregledmuzičkih Dešavanja U Beogradu Sagledan Kroz Kritike Objavljene U ​Dnevnom Listu Politika 1904-1905'
-slug:
+slug: the-begginings-of-music-criticism-in-belgrade
 description: 'The first appearance of the daily newspaper Politika in Belgrade, in January 12th, 1904, marked a great step toward independent journalism in the Kingdom of Serbia. During its first two years of publishing, Politika delivered judgments and reportages  on concerts that have been taking place in Belgrade.'
 authors: [dinavoj]
 tags:
@@ -21,7 +21,7 @@ Accepted: 04.Jan.2016
 
 ```
 
-# #10 Začeci Muzičke Kritike U Srbiji: Pregledmuzičkih Dešavanja U Beogradu Sagledan Kroz Kritike Objavljene U ​Dnevnom Listu Politika 1904-1905 [The Begginings Of Music Criticism In Belgrade:A Display Of Musical Events Considered Through Reviews Published In The Daily Newspaper "Politika" 1904-1905]
+# #10 Začeci Muzičke Kritike U Srbiji: Pregledmuzičkih Dešavanja U Beogradu Sagledan Kroz Kritike Objavljene U ​Dnevnom Listu Politika 1904-1905 <br /> [The Begginings Of Music Criticism In Belgrade:A Display Of Musical Events Considered Through Reviews Published In The Daily Newspaper "Politika" 1904-1905]
 
 export function Name({ author, affil, email }) {
 	return (
